API für Turnier, Spiele und Mannschaften erstellt. Swagger aktualisiert
